--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typescript-react-go-to-definition-plugin",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "",
   "main": "lib/index.js",
   "author": "miaonster17@gmail.com",
@@ -9,11 +9,15 @@
     "lib"
   ],
   "devDependencies": {
+    "@types/minimatch": "^3.0.4",
     "tslint": "^6.1.0",
     "typescript": "^4.2.3"
   },
   "scripts": {
     "compile": "./node_modules/.bin/tsc -p .",
     "watch:compile": "./node_modules/.bin/tsc --watch -p ."
+  },
+  "dependencies": {
+    "minimatch": "^3.0.4"
   }
 }
